--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,18 @@ limitations under the License.
       <version>1.2.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.jblas</groupId>
+      <artifactId>jblas</artifactId>
+      <version>1.2.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.googlecode.efficient-java-matrix-library</groupId>
+      <artifactId>ejml</artifactId>
+      <version>0.25</version>
+    </dependency>
+
   </dependencies>
 
   <distributionManagement>
